# lumen

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  b3_8_run.ps1  build-log.txt  clippy-log.txt  test-log.txt
.github/macos/: Info.plist
.github/workflows/: ci.yml  package-linux.yml  package-macos.yml  release.yml
crates/lumen-app/: Cargo.toml  build.rs
crates/lumen-app/assets/: completion_server.ps1  integration.ps1
crates/lumen-app/src/: action.rs  background.rs  clipboard_files.rs  cloud.rs  completion.rs  completion_sidecar.rs  composer.rs  footer_mouse.rs  history.rs  input.rs  keymap.rs  links.rs  main.rs  mode.rs  os_cwd.rs  p2p.rs  paths.rs  proc_icon.rs  profile.rs  remote.rs  remote_mirror.rs  remote_ws.rs  session.rs  sessions_store.rs  settings.rs  single_instance.rs  snap_layouts.rs  update.rs  virtual_files.rs
crates/lumen-app/src/i18n/: en.rs  mod.rs  strings.rs  zh_cn.rs  zh_tw.rs
crates/lumen-app/src/shell/: completion_ui.rs  filetree.rs  history_search_ui.rs  layout.rs  login_ui.rs  mod.rs  remote_ui.rs  settings_ui.rs  statusbar.rs  theme.rs  toast.rs  topbar.rs
crates/lumen-editor/: Cargo.toml
crates/lumen-editor/src/: action.rs  cursor.rs  document.rs  highlight.rs  lib.rs  undo.rs
crates/lumen-editor/tests/: replay.rs
crates/lumen-protocol/: Cargo.toml
crates/lumen-protocol/src/: lib.rs  remote.rs
crates/lumen-pty/: Cargo.toml
crates/lumen-pty/src/: lib.rs
crates/lumen-renderer/: Cargo.toml
crates/lumen-renderer/src/: composer_view.rs  lib.rs  rect.rs  rect.wgsl  theme.rs  themes.rs
crates/lumen-term/: Cargo.toml
crates/lumen-term/examples/: replay.rs
crates/lumen-term/src/: block.rs  cell.rs  grid.rs  lib.rs  mouse.rs  selection.rs  term.rs
crates/lumen-term/tests/: bracketed_paste_passthrough.rs  osc633_passthrough.rs  req6_reflow_conpty.rs
docs/: M3应用外壳设计.md  M3验收报告.md  M5.3-part3c-2-文件复制粘贴-接续-2026-06-21.md  M5.3-part3c-2-片6-虚拟文件剪贴板-MVP-2026-06-21.md  M5.3-part3c-2-片7-传输性能-base64-2026-06-21.md  M5.3-part3c-2-片8-目录递归虚拟文件-实现蓝图-2026-06-21.md  M5.3-part3d-完成与后续路线图-接续-2026-06-23.md  M5.3-part3d-远程多会话多窗格镜像-设计-2026-06-22.md  M5接续-2026-06-18.md  M5远程控制设计.md  M6-P2P直连-QUIC打洞-设计-2026-06-23.md  架构设计.md  终端核心-接续-2026-06-15.md  输入编辑器设计.md  进度与待办-接续.md  需求接续-2026-06-15.md  需求池.md
installer/: lumen.iss
scripts/: release.ps1
server/lumen-server/: Cargo.toml  README.md
server/lumen-server/src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  hub.rs  main.rs  state.rs  ws.rs
