[workspace]
resolver = "2"
members = [
    "crates/lumen-pty",
    "crates/lumen-term",
    "crates/lumen-renderer",
    "crates/lumen-app",
    "crates/lumen-editor",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jimhy/lumen"

[workspace.dependencies]
lumen-pty = { path = "crates/lumen-pty" }
lumen-term = { path = "crates/lumen-term" }
lumen-renderer = { path = "crates/lumen-renderer" }
lumen-editor = { path = "crates/lumen-editor" }

anyhow = "1"
arboard = "3"
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
portable-pty = "0.9"
vte = "0.15"
unicode-width = "0.2"
# grapheme cluster 边界（光标移动/退格按 grapheme 粒度）：emoji ZWJ 序列、
# 中文组合字、组合变音均按 UAX#29 grapheme cluster 边界处理。
# unicode-rs 官方库，纯算法零传递依赖；Helix/Zed/Alacritty 同款选型。
unicode-segmentation = "1"
winit = "0.30"
wgpu = "29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glyphon = "0.11"
pollster = "0.4"
# egui 三件套版本必须一致（0.34 → wgpu 29 / winit 0.30，与现有渲染栈同源）。
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
# 文件树控件（单一维护者风险：用法收敛在 shell/filetree.rs 单模块内，便于替换）。
egui_ltreeview = "0.7"
# 删除走回收站（文件树右键删除，需求池 P3）：Windows 端封装 IFileOperation
# COM 全套，自实现成本高且易错；trash 是该领域的事实标准库。
trash = "5"
# 单实例检测（F8）：CreateMutexW / 命名事件等 Win32 同步原语。已是
# winit/wgpu 等的传递依赖（lock 中已有 0.61），零新增外部 crate。
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    # 侧栏会话图标（F7②，proc_icon.rs）：CreateToolhelp32Snapshot /
    # Process32FirstW / Process32NextW / PROCESSENTRY32W —— 从 shell PID
    # 查前台运行程序，再读其 exe 图标（SHGetFileInfoW，Win32_UI_Shell）。
    "Win32_System_Diagnostics_ToolHelp",
    # M3.8 Snap Layouts 子类化（snap_layouts.rs）：SetWindowSubclass /
    # DefSubclassProc / SetWindowSubclassCallback；WM_NCHITTEST 命中
    # 最大化按钮区域时返回 HTMAXBUTTON，触发 Win11 Snap 弹出。
    "Win32_UI_Shell",
    # WM_NCHITTEST / HTMAXBUTTON / WM_NCLBUTTONDOWN 等消息常量，
    # 以及 ShowWindow / SW_RESTORE / SW_MAXIMIZE / GetWindowRect。
    "Win32_UI_WindowsAndMessaging",
    # 最大化越界修复（第十轮问题1）：MonitorFromWindow / GetMonitorInfoW /
    # MONITORINFO / HMONITOR，用于计算最大化时窗口超出工作区的越界量。
    "Win32_Graphics_Gdi",
] }

# 背景图片解码（P13）：纯 CPU 解码、不依赖系统图形库，支持 png/jpeg/webp/bmp。
# default-features = false 只开必要格式，避免引入不必要的编解码器代码。
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
# exe 资源图标嵌入（第二十二轮）：构建期把 lumen.ico 嵌入 PE 资源区，
# 使文件管理器/快捷方式/任务栏显示正确图标。winresource 是 winres 的
# 社区维护 fork，仅在 build.rs 中使用，零运行时依赖；MSVC 工具链已内置
# rc.exe 编译器，无需额外安装。
winresource = "0.1"
# 文件对话框（P13）：Windows 原生 IFileOpenDialog，零外部 DLL 依赖。
# default-features = false 关闭 async 后端等无用特性（同步对话框只需基础特性）。
rfd = { version = "0.15", default-features = false }
# HTTP 客户端（F3 热更）：同步、轻量，后台线程内阻塞请求 GitHub/Gitee
# Release API 并下载安装包。自带 rustls TLS（不依赖系统 OpenSSL）。HTTP+TLS
# 自实现成本高且无法离线 E2E 测试，选成熟库以最大化首次正确率。
ureq = "2"

# 不开 LTO：本机 rustc 1.94/1.96 两个版本开 thin LTO（linker-plugin-lto）
# 编译均随机崩溃（HEAP_CORRUPTION/ACCESS_VIOLATION），关闭后稳定通过。
[profile.release]
codegen-units = 1

# 第三方依赖不带调试信息：规避 rustc 编译 naga 时的栈溢出，并加快编译。
[profile.dev.package."*"]
debug = false
