[workspace]
resolver = "2"
members = [
    "crates/lumen-pty",
    "crates/lumen-term",
    "crates/lumen-renderer",
    "crates/lumen-app",
    "crates/lumen-editor",
    # M5 远程控制新增：协议（跨平台，client/server 共享）+ 云服务端。
    # server 仅用纯跨平台 crate，Linux 发布用 `cargo build -p lumen-server`
    # 只编其依赖树，不触及 windows-sys/ConPTY 等客户端 crate。
    "crates/lumen-protocol",
    "server/lumen-server",
]

[workspace.package]
version = "1.0.6"
edition = "2021"
# 最低支持 Rust 版本（MSRV）：由锁定依赖树决定，当前最高为 ecolor 0.34.3
# （egui 0.34 成员）要求 1.92；README 徽章与此保持一致。仅客户端 crates 继承；
# lumen-server / lumen-protocol 单独声明 1.88（服务端树与客户端 egui 解耦，
# 保云 Linux 发行版工具链可编服务端，见各自 Cargo.toml）。
rust-version = "1.92"
license = "Apache-2.0"
repository = "https://github.com/jimhy/lumen"

[workspace.dependencies]
lumen-pty = { path = "crates/lumen-pty" }
lumen-term = { path = "crates/lumen-term" }
lumen-renderer = { path = "crates/lumen-renderer" }
lumen-editor = { path = "crates/lumen-editor" }
lumen-protocol = { path = "crates/lumen-protocol" }

anyhow = "1"
arboard = "3"
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
portable-pty = "0.9"
vte = "0.15"
unicode-width = "0.2"
# grapheme cluster 边界（光标移动/退格按 grapheme 粒度）：emoji ZWJ 序列、
# 中文组合字、组合变音均按 UAX#29 grapheme cluster 边界处理。
# unicode-rs 官方库，纯算法零传递依赖；Helix/Zed/Alacritty 同款选型。
unicode-segmentation = "1"
winit = "0.30"
wgpu = "29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 文件传输块在 JSON 里 base64 编码（lumen-protocol remote.rs 的 b64 mod），
# 避免 Vec<u8> 序列化成数字数组膨胀 ~4x；服务端仍盲转 Value，无感知。
base64 = "0.22"
glyphon = "0.11"
pollster = "0.4"
# egui 三件套版本必须一致（0.34 → wgpu 29 / winit 0.30，与现有渲染栈同源）。
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
# 文件树控件（单一维护者风险：用法收敛在 shell/filetree.rs 单模块内，便于替换）。
egui_ltreeview = "0.7"
# 删除走回收站（文件树右键删除，需求池 P3）：Windows 端封装 IFileOperation
# COM 全套，自实现成本高且易错；trash 是该领域的事实标准库。
trash = "5"
# 单实例检测（F8）：CreateMutexW / 命名事件等 Win32 同步原语。已是
# winit/wgpu 等的传递依赖（lock 中已有 0.61），零新增外部 crate。
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    # 侧栏会话图标（F7②，proc_icon.rs）：CreateToolhelp32Snapshot /
    # Process32FirstW / Process32NextW / PROCESSENTRY32W —— 从 shell PID
    # 查前台运行程序，再读其 exe 图标（SHGetFileInfoW，Win32_UI_Shell）。
    "Win32_System_Diagnostics_ToolHelp",
    # M3.8 Snap Layouts 子类化（snap_layouts.rs）：SetWindowSubclass /
    # DefSubclassProc / SetWindowSubclassCallback；WM_NCHITTEST 命中
    # 最大化按钮区域时返回 HTMAXBUTTON，触发 Win11 Snap 弹出。
    "Win32_UI_Shell",
    # WM_NCHITTEST / HTMAXBUTTON / WM_NCLBUTTONDOWN 等消息常量，
    # 以及 ShowWindow / SW_RESTORE / SW_MAXIMIZE / GetWindowRect。
    "Win32_UI_WindowsAndMessaging",
    # 最大化越界修复（第十轮问题1）：MonitorFromWindow / GetMonitorInfoW /
    # MONITORINFO / HMONITOR，用于计算最大化时窗口超出工作区的越界量。
    "Win32_Graphics_Gdi",
    # 系统文件剪贴板（clipboard_files.rs）：文件树复制/粘贴接入 Windows CF_HDROP，
    # 与资源管理器及任意应用互通。DataExchange = OpenClipboard/SetClipboardData/
    # GetClipboardData/EmptyClipboard/IsClipboardFormatAvailable；Ole = CF_HDROP 常量；
    # Memory = GlobalAlloc/GlobalLock/GlobalFree 构造 DROPFILES。DragQueryFileW/DROPFILES/
    # HDROP 在已启用的 Win32_UI_Shell。
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
] }

# 远程虚拟文件剪贴板（virtual_files.rs，M5.3 part3c-2 片6）：自定义 COM IDataObject +
# 延迟渲染，让「远程复制」的文件在资源管理器/桌面 Ctrl+V 时按需从被控端下载（类似
# WinSCP 拖拽下载）。windows-sys 是纯 FFI、无法实现 COM server（手写 vtable/IUnknown
# 引用计数几百行 unsafe），故引 windows crate 用 #[implement] 宏；与 windows-sys 0.61
# 同代并存。仅 Windows 客户端用，server 不依赖。
windows = { version = "0.61", features = [
    "Win32_Foundation",
    # IDataObject / IStream / FORMATETC / STGMEDIUM / IEnumFORMATETC / TYMED / DATADIR。
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    # OleInitialize / OleSetClipboard / OleFlushClipboard / OleIsCurrentClipboard /
    # IDataObjectAsyncCapability（异步数据对象，避免大文件阻塞资源管理器）。
    "Win32_System_Ole",
    # RegisterClipboardFormatW（CFSTR_FILEDESCRIPTORW / CFSTR_FILECONTENTS /
    # CFSTR_PREFERREDDROPEFFECT 是注册型格式，非预定义常量）。
    "Win32_System_DataExchange",
    # GlobalAlloc / GlobalLock / GlobalUnlock 构造 FILEGROUPDESCRIPTORW 的 HGLOBAL。
    "Win32_System_Memory",
    # STGMEDIUM / STGMEDIUM_0 / IDataObject_Impl 在 windows 0.61 gated 于 Gdi（其 union 含
    # HBITMAP / HENHMETAFILE 等 GDI 句柄）+ Com_StructuredStorage。
    "Win32_Graphics_Gdi",
    # FILEGROUPDESCRIPTORW / FILEDESCRIPTORW（文件描述符结构）。
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    # 专用 STA 线程消息泵：GetMessageW / TranslateMessage / DispatchMessageW / MSG /
    # PostThreadMessageW / WM_* 常量。
    "Win32_UI_WindowsAndMessaging",
    # GetCurrentThreadId（OLE 线程把自身 id 报回 UI 线程供 PostThreadMessageW）。
    "Win32_System_Threading",
    # 稳定设备标识（cloud::hardware_id）：RegGetValueW 读 HKLM\SOFTWARE\Microsoft\
    # Cryptography\MachineGuid，作为跨「更新/删文件/换目录/DB 重置」不变的同机标识，
    # 供服务端幂等认领设备、根治「幽灵设备」。
    "Win32_System_Registry",
] }
# COM server：`#[implement]` 宏展开引用 windows_core crate，须显式依赖使其在 crate root 可见
# （与 windows 0.61 同版）。
windows-core = "0.61"

# 背景图片解码（P13）：纯 CPU 解码、不依赖系统图形库，支持 png/jpeg/webp/bmp。
# default-features = false 只开必要格式，避免引入不必要的编解码器代码。
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
# exe 资源图标嵌入（第二十二轮）：构建期把 lumen.ico 嵌入 PE 资源区，
# 使文件管理器/快捷方式/任务栏显示正确图标。winresource 是 winres 的
# 社区维护 fork，仅在 build.rs 中使用，零运行时依赖；MSVC 工具链已内置
# rc.exe 编译器，无需额外安装。
winresource = "0.1"
# 文件对话框（P13）：Windows 原生 IFileOpenDialog，零外部 DLL 依赖。
# default-features = false 关闭 async 后端等无用特性（同步对话框只需基础特性）。
rfd = { version = "0.15", default-features = false }
# HTTP 客户端（F3 热更）：同步、轻量，后台线程内阻塞请求 GitHub/Gitee
# Release API 并下载安装包。自带 rustls TLS（不依赖系统 OpenSSL）。HTTP+TLS
# 自实现成本高且无法离线 E2E 测试，选成熟库以最大化首次正确率。
ureq = { version = "2", features = ["socks-proxy"] }
# M5.3 客户端 WebSocket（remote_ws.rs）：同步 tungstenite，后台线程阻塞收发，
# 不引 tokio（与 ureq/热更同款后台线程范式）。rustls-tls-native-roots 支持
# 生产 wss（Caddy 终止 TLS）；局域网 ws:// 直连免 TLS。与服务端 axum 用同版
# tungstenite 0.29，帧格式一致。
tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }

# ── M6 P2P 直连（QUIC 打洞 + 中继回退，crates/lumen-app/src/p2p.rs）─────────────
# 客户端 P2P 后台线程内起 current-thread tokio runtime 驱动 quinn，与同步 tungstenite
# 主线程范式**隔离**（tokio 关在 P2P 线程内，不污染主线程）。current-thread 只需
# rt/net/time/sync/macros，不引 rt-multi-thread。server 已用 tokio 1（full），版本兼容。
tokio = { version = "1", default-features = false, features = ["rt", "net", "time", "sync", "macros"] }
# QUIC 栈：rustls 0.23 + ring 后端，与 tungstenite 的 rustls-tls-native-roots 同源
# （Cargo.lock 已有 rustls 0.23 / ring 0.17，不新增加密栈）。default-features = false
# 关掉默认 aws-lc-rs，改 rustls-ring，避免 Windows 上 aws-lc 的 C 编译依赖。QUIC 自带
# TLS 1.3 = 直连数据面 E2E 加密天然就绪。
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
# 自签证书（P2P 直连握手）：双方各生成临时自签证书，SPKI 指纹经已鉴权的信令通道交换
# 校验（防 MITM）。用 ring 后端与 quinn/rustls 对齐，关 aws_lc_rs。
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# P2P 握手的自定义 pinned 证书验证器（指纹信任锚 + mTLS 双向认证）+ quinn Client/ServerConfig
# 构造。版本与 quinn/tungstenite 同源（rustls 0.23 + ring），default-features=false 关 aws-lc-rs。
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# 不开 LTO：本机 rustc 1.94/1.96 两个版本开 thin LTO（linker-plugin-lto）
# 编译均随机崩溃（HEAP_CORRUPTION/ACCESS_VIOLATION），关闭后稳定通过。
[profile.release]
codegen-units = 1

# 第三方依赖不带调试信息：规避 rustc 编译 naga 时的栈溢出，并加快编译。
[profile.dev.package."*"]
debug = false
