[package]
name = "lumen-app"
description = "Lumen 主程序：winit 事件循环，组装 PTY/终端状态机/渲染器"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lumen"
path = "src/main.rs"

[features]
## 输入编辑器 footer 渲染（M4.1 批C/D1）——设计稿 §7.1。
## 默认开启；剔除时所有 footer 渲染/占高逻辑被完全移除，
## 行为与旧版逐字节一致。
input-editor = ["lumen-renderer/input-editor", "dep:lumen-editor"]
default = ["input-editor"]

[dependencies]
anyhow.workspace = true
# 输入编辑器状态机（M4.1 批D1）；仅 input-editor feature 开启时引入。
lumen-editor = { workspace = true, optional = true }
arboard.workspace = true
crossbeam-channel.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui_ltreeview.workspace = true
env_logger.workspace = true
log.workspace = true
lumen-pty.workspace = true
lumen-renderer.workspace = true
lumen-term.workspace = true
# M5 远程控制：客户端/服务端共享协议类型（纯 serde，跨平台）。
lumen-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
trash.workspace = true
winit.workspace = true
# 背景图片功能（P13）。
image.workspace = true
rfd.workspace = true
# 热更检查/下载（F3）：HTTP 客户端。
ureq.workspace = true
# M5.3 远程控制 WebSocket 客户端（同步，后台线程）。
tungstenite.workspace = true
# M6 P2P 直连（p2p.rs）：QUIC 打洞 + 中继回退。tokio current-thread runtime 隔离在
# P2P 后台线程内驱动 quinn；rcgen 生成握手用自签证书；rustls 自定义 pinned 证书验证器
# （mTLS 双向认证 + 指纹信任锚）。详见 Cargo.toml workspace deps。
tokio.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true

# 单实例检测（F8）仅 Windows 路径需要 Win32 同步原语。
[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
# 远程虚拟文件剪贴板（virtual_files.rs）：COM IDataObject 延迟渲染，需 #[implement] 宏。
windows.workspace = true
windows-core.workspace = true

# exe 资源图标嵌入（第二十二轮）：仅 Windows 构建期生效，零运行时依赖。
[target.'cfg(windows)'.build-dependencies]
winresource = { workspace = true }
