[package]
name = "lumen-app"
description = "Lumen 主程序：winit 事件循环，组装 PTY/终端状态机/渲染器"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lumen"
path = "src/main.rs"

# ── Linux .deb 打包（cargo-deb，见 .github/workflows/package-linux.yml）─────────
# cargo-deb 自动探测链接期共享库依赖（gtk/xcb/xkbcommon/wayland 等，$auto）；
# wgpu 运行时 dlopen 加载 Vulkan/GL（非链接期依赖，$auto 检测不到），显式补上。
# 不指定 assets：默认把 [[bin]] lumen 打到 /usr/bin/lumen。
[package.metadata.deb]
maintainer = "Lumen contributors <noreply@users.noreply.github.com>"
copyright = "2026 jimhy — Apache-2.0"
extended-description = "Lumen: GPU-accelerated terminal — cross-platform (Linux/macOS) build."
section = "utils"
priority = "optional"
depends = "$auto, libvulkan1, libgl1, libegl1"

[features]
## 输入编辑器 footer 渲染（M4.1 批C/D1）——设计稿 §7.1。
## 默认开启；剔除时所有 footer 渲染/占高逻辑被完全移除，
## 行为与旧版逐字节一致。
input-editor = ["lumen-renderer/input-editor", "dep:lumen-editor"]
default = ["input-editor"]

[dependencies]
anyhow.workspace = true
# 输入编辑器状态机（M4.1 批D1）；仅 input-editor feature 开启时引入。
lumen-editor = { workspace = true, optional = true }
arboard.workspace = true
crossbeam-channel.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui_ltreeview.workspace = true
env_logger.workspace = true
log.workspace = true
lumen-pty.workspace = true
lumen-renderer.workspace = true
lumen-term.workspace = true
# M5 远程控制：客户端/服务端共享协议类型（纯 serde，跨平台）。
lumen-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
# 文件剪贴板（clipboard_files.rs）Linux 实现的 file:// URI 路径转义纯逻辑；
# 全平台编译（cfg(any(linux, test)) 的 uri 模块 + 三平台单测）。
percent-encoding.workspace = true
trash.workspace = true
winit.workspace = true
# 背景图片功能（P13）。
image.workspace = true
rfd.workspace = true
# 热更检查/下载（F3）：HTTP 客户端。
ureq.workspace = true
# M5.3 远程控制 WebSocket 客户端（同步，后台线程）。
tungstenite.workspace = true
# M6 P2P 直连（p2p.rs）：QUIC 打洞 + 中继回退。tokio current-thread runtime 隔离在
# P2P 后台线程内驱动 quinn；rcgen 生成握手用自签证书；rustls 自定义 pinned 证书验证器
# （mTLS 双向认证 + 指纹信任锚）。详见 Cargo.toml workspace deps。
tokio.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true

# Linux 上 rfd 必须显式选一个后端（gtk3 / xdg-portal），否则其 build.rs 直接
# panic（workspace 层 default-features=false 关掉了默认 gtk3，Windows/macOS 用
# 系统原生对话框无需后端 feature，唯 Linux 强制要求）。选 gtk3：同步 FileDialog
# API 与现有用法一致，构建/运行需系统 libgtk-3（CI 已装 libgtk-3-dev）。
[target.'cfg(target_os = "linux")'.dependencies]
rfd = { workspace = true, features = ["gtk3"] }
# Linux 文件剪贴板（clipboard_files.rs）：X11 用 x11-clipboard（纯 Rust x11rb，
# 进程内常驻 selection owner 持续 serve text/uri-list）；Wayland 用 wl-clipboard-rs
# （构建/运行需 libwayland-client，CI 已装 libwayland-dev）。
x11-clipboard.workspace = true
wl-clipboard-rs.workspace = true
# 会话前台进程图标（proc_icon.rs）：按可执行名查 freedesktop 图标主题。
freedesktop-icons.workspace = true

# macOS 原生：文件剪贴板（clipboard_files.rs）用 NSPasteboard 的文件 URL；进程图标
# （proc_icon.rs）用 NSWorkspace/NSImage/NSBitmapImageRep。objc2 系按用到的类开 feature。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true, features = ["NSArray", "NSString", "NSURL", "NSData"] }
objc2-app-kit = { workspace = true, features = [
    "NSPasteboard",
    "NSWorkspace",
    "NSImage",
    "NSImageRep",
    "NSBitmapImageRep",
] }

# 单实例检测（F8）仅 Windows 路径需要 Win32 同步原语。
[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
# 远程虚拟文件剪贴板（virtual_files.rs）：COM IDataObject 延迟渲染，需 #[implement] 宏。
windows.workspace = true
windows-core.workspace = true

# exe 资源图标嵌入（第二十二轮）：仅 Windows 构建期生效，零运行时依赖。
[target.'cfg(windows)'.build-dependencies]
winresource = { workspace = true }
