[package]
name = "lumen-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lumen 远程控制协议：客户端与 lumen-server 共享的线缆类型（零平台依赖）"

[dependencies]
serde = { workspace = true }
# M5.3 数据面盲转：Relay 载荷用不透明 serde_json::Value，服务端不解析内部、
# 原样转发；客户端两端共享 RemoteFrame 强类型收发。纯跨平台，零平台依赖。
serde_json = { workspace = true }
